--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,19 @@
 <div class="card">
   @if ((activeItem$ | async); as activeItem) {
-  <p-tabMenu
-    [model]="items"
-    [activeItem]="activeItem"
-    (activeItemChange)="router.navigate([$event.label!.toLowerCase()])"
-  ></p-tabMenu>
+
+  <p-tabMenu [model]="items" [activeItem]="activeItem">
+    <ng-template pTemplate="item" let-item>
+      <a
+        class="p-menuitem-link flex justify-content-between align-items-center p-3"
+        (click)="router.navigate([item.label!.toLowerCase()])"
+      >
+        <div>
+          <span [class]="item.icon"></span>
+          <span> {{ item.label }}</span>
+        </div>
+      </a>
+    </ng-template>
+  </p-tabMenu>
   }
 </div>
 
