--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,20 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
+html {
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   padding: 0;
+}
+
+.pad {
+  box-sizing: border-box;
+  padding: 0 1rem;
+}
+
+.p-card:active {
+  background-color: var(--surface-100);
 }
