--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,24 @@ body {
 .p-card:active {
   background-color: var(--surface-100);
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.space-between {
+  justify-content: space-between;
+}
