--- a/src/app/views/settings/rider-template/rider-template.component.html
+++ b/src/app/views/settings/rider-template/rider-template.component.html
@@ -1,1 +1,3 @@
-<p>rider-template works!</p>
+<div class="center">
+  <p-button (onClick)="downloadTemplate()">Download Rider Template</p-button>
+</div>
