--- a/src/app/views/settings/manage-events/manage-events.component.html
+++ b/src/app/views/settings/manage-events/manage-events.component.html
@@ -32,6 +32,7 @@
   <p>No upcoming events</p>
   }
   <h2>Completed Events</h2>
+
   @for (event of (completedEvents$ | async); track event.id) {
   <p-card [header]="event.name" [ngStyle]="{ margin: '0.5rem' }">
     <div class="grid">
@@ -44,12 +45,10 @@
       <p>Laps</p>
       <p class="bold">{{ event.lap_count }}</p>
       <p-button
-        label="Delete"
-        icon="pi pi-times"
-        severity="danger"
-        (click)="deleteEvent(event.id)"
-        [disabled]="(pendingRequest$ | async)!"
-      ></p-button>
+        label="Results"
+        (onClick)="router.navigate(['settings/results', event.id])"
+      >
+      </p-button>
     </div>
   </p-card>
   } @empty {
