--- a/src/app/views/observe/observe.component.html
+++ b/src/app/views/observe/observe.component.html
@@ -55,12 +55,21 @@
       <tr>
         <th>Lap Number</th>
         <th>Score</th>
+        <th></th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-score>
       <tr>
         <td>{{ score.lap_number }}</td>
         <td>{{ score.score }}</td>
+        <td>
+          <p-button
+            label="Edit"
+            icon="pi pi-pencil"
+            class="p-button-rounded p-button-success"
+            (click)="edit()"
+          ></p-button>
+        </td>
       </tr>
     </ng-template>
   </p-table>
@@ -95,4 +104,6 @@
   }}}}
 </div>
 
-<p-toast position="bottom-center"></p-toast>
+<p-toast />
+
+<p-confirmDialog />
