--- a/src/app/views/settings/new-event/new-event.component.html
+++ b/src/app/views/settings/new-event/new-event.component.html
@@ -22,6 +22,17 @@
         <label for="eventLocation">Event Location</label>
       </p-floatLabel>
     </div>
+    <div class="float-label">
+      <p-floatLabel>
+        <input
+          id="password"
+          type="text"
+          pInputText
+          formControlName="password"
+        />
+        <label for="password">Event Passcode (not required)</label>
+      </p-floatLabel>
+    </div>
 
     <div class="numbers">
       <h4>Sections</h4>
