--- a/src/app/views/observe/observe.component.scss
+++ b/src/app/views/observe/observe.component.scss
@@ -26,11 +26,15 @@ p-selectButton {
   margin-bottom: 2rem;
 }
 
+h2 {
+  margin-bottom: 2rem;
+}
+
 h4 {
   color: var(--green-500);
 }
 
-.identifier {
+h3 {
   margin-top: 4rem;
 }
 
