event time now timezone agnostic

--- a/src/app/views/settings/new-event/new-event.component.html
+++ b/src/app/views/settings/new-event/new-event.component.html
@@ -71,6 +71,7 @@
       [inline]="true"
       [showWeek]="true"
       [showTime]="true"
+      (onMonthChange)="timeSet()"
     ></p-calendar>
 
     <h3>Upload Riders List (Excel File)</h3>
