edit scores improved

--- a/src/app/views/settings/new-event/new-event.component.html
+++ b/src/app/views/settings/new-event/new-event.component.html
@@ -19,7 +19,7 @@
           pInputText
           formControlName="eventLocation"
         />
-        <label for="eventLocation">Event Location</label>
+        <label for="eventLocation">Location</label>
       </p-floatLabel>
     </div>
     <div class="float-label">
@@ -30,7 +30,7 @@
           pInputText
           formControlName="password"
         />
-        <label for="password">Event Passcode (not required)</label>
+        <label for="password">Passcode (not required)</label>
       </p-floatLabel>
     </div>
 
