--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,11 +4,15 @@
 
 html {
   font-size: 14px;
+  min-height: 100dvh;
+  height: 100dvh;
 }
 
 body {
   margin: 0;
   padding: 0;
+  min-height: 100dvh;
+  height: 100dvh;
 }
 
 .pad {
