--- a/src/app/views/observe/observe.component.html
+++ b/src/app/views/observe/observe.component.html
@@ -1,98 +1,91 @@
 <div class="pad">
   <h2>Rider Observations</h2>
 
-  @if ((riders$ | async); as riders) {
-
-  <p-floatLabel>
-    <!-- <p-inputNumber
-        inputId="integeronly"
-        [(ngModel)]="selectedRiderNumber"
-        [class]="(riderValid | async) ? undefined : 'invalid'"
-      /> -->
-
-    <p-autoComplete
-      [forceSelection]="true"
-      [dropdown]="true"
-      [optionLabel]="riderToString"
-      [(ngModel)]="selectedRider"
-      [suggestions]="filteredRiders"
-      (completeMethod)="search($event, riders)"
-      inputId="rider-search"
-    >
-      <ng-template let-rider pTemplate="item">
-        <div>
+  @if (riders$ | async; as riders) {
+    <p-floatLabel>
+      <p-autoComplete
+        [forceSelection]="true"
+        [dropdown]="true"
+        [optionLabel]="riderToString"
+        [(ngModel)]="selectedRider"
+        [suggestions]="filteredRiders"
+        (completeMethod)="search($event, riders)"
+        inputId="rider-search"
+      >
+        <ng-template let-rider pTemplate="item">
           <div>
-            {{
-              rider.rider_number +
-                " " +
-                rider.rider_name +
-                " (" +
-                rider.class +
-                ")"
-            }}
+            <div>
+              {{
+                rider.rider_number +
+                  " " +
+                  rider.rider_name +
+                  " (" +
+                  rider.class +
+                  ")"
+              }}
+            </div>
           </div>
-        </div>
+        </ng-template>
+      </p-autoComplete>
+      <label for="rider-search">Select a rider</label>
+    </p-floatLabel>
+  }
+
+  @if (previousScores$ | async; as prevScores) {
+    @if (totalLaps$ | async; as laps) {
+      @if (prevScores.length < laps) {
+        <h3>
+          Record New Score For Lap
+          <div class="lap">
+            {{ prevScores.length + 1 }}
+          </div>
+        </h3>
+
+        <p-selectButton
+          class="center"
+          [options]="scoreOptions"
+          [(ngModel)]="selectedScore"
+          [disabled]="submitPending()"
+        ></p-selectButton>
+
+        <p-button
+          class="center"
+          label="Submit Score"
+          [disabled]="selectedScore() === undefined || submitPending()"
+          (click)="submitScore(prevScores.length + 1)"
+        ></p-button>
+      } @else {
+        <h3 class="center done-laps">All {{ laps }} Laps Recorded</h3>
+      }
+    }
+    <h3>Recorded Lap Times</h3>
+
+    <p-table
+      [value]="prevScores"
+      [tableStyle]="{ 'min-width': 'calc(100vw - 2rem)' }"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Lap Number</th>
+          <th>Score</th>
+          <th></th>
+        </tr>
       </ng-template>
-    </p-autoComplete>
-    <label for="rider-search">Select a rider number</label>
-  </p-floatLabel>
-
-  } @if (previousScores$ | async; as prevScores) {
-  <!-- @if (totalLaps() <= (prevScores?.length ?? 0)) { -->
-  <h3>
-    Record New Score For Lap
-    <div class="lap">
-      {{ prevScores.length + 1 }}
-    </div>
-  </h3>
-
-  <p-selectButton
-    class="center"
-    [options]="scoreOptions"
-    [(ngModel)]="selectedScore"
-    [disabled]="submitPending()"
-  ></p-selectButton>
-
-  <p-button
-    class="center"
-    label="Submit Score"
-    [disabled]="selectedScore() === undefined || submitPending()"
-    (click)="submitScore(prevScores.length + 1)"
-  ></p-button>
-
-  <!-- } } @else {
-  <h3 class="center done-laps">All {{ totalLaps }} Laps Recorded</h3>
-  } -->
-
-  <h3>Recorded Lap Times</h3>
-
-  <p-table
-    [value]="prevScores"
-    [tableStyle]="{ 'min-width': 'calc(100vw - 2rem)' }"
-  >
-    <ng-template pTemplate="header">
-      <tr>
-        <th>Lap Number</th>
-        <th>Score</th>
-        <th></th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-score>
-      <tr>
-        <td>{{ score.lap_number }}</td>
-        <td>{{ score.score }}</td>
-        <td>
-          <p-button
-            label="Edit"
-            icon="pi pi-pencil"
-            class="p-button-rounded p-button-success"
-            (click)="showEditDialog(score)"
-          ></p-button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
-
+      <ng-template pTemplate="body" let-score>
+        <tr>
+          <td>{{ score.lap_number }}</td>
+          <td>{{ score.score }}</td>
+          <td>
+            <p-button
+              label="Edit"
+              icon="pi pi-pencil"
+              class="p-button-rounded p-button-success"
+              (click)="showEditDialog(score)"
+            ></p-button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
   }
 </div>
 
@@ -105,21 +98,17 @@
   [style]="{ width: '25rem' }"
 >
   <div>
-    <label for="score"> New Score: </label>
-    <input
+    <p-selectButton
       #editInput
-      [(ngModel)]="inputValue"
-      id="score"
-      pInputText
-      autocomplete="off"
-      type="number"
-      min="0"
-      max="10"
-    />
+      class="center"
+      [options]="scoreOptions"
+      [(ngModel)]="editScore"
+    ></p-selectButton>
+
     <div class="error">
       <small
         [style]="{
-          color: inputValid() ? 'transparent' : 'var(--red-500)'
+          color: inputValid() ? 'transparent' : 'var(--red-500)',
         }"
       >
         Score must be between 0 and 10
